Fix aligning

--- a/css/custom.css
+++ b/css/custom.css
@@ -64,6 +64,10 @@ h2, h3 {
   margin-left: 5px;
 }
 
+.header-buttons {
+  text-align: left;
+}
+
 .btn {
   font-weight: normal;
 }
